# socli

./: .gitignore  Cargo.toml  README.md  TODO.md  schema.sh
.github/workflows/: build.yml
src/: main.rs
src/app/: action.rs  mod.rs  state.rs  ui.rs
src/app/input/: events.rs  key.rs  mod.rs
src/app/io/: handler.rs  mod.rs
src/app/task/: load_player_prices.rs  load_players.rs  load_players_injury.rs  load_players_stats.rs  mod.rs  refresh_players_details.rs  run_strategies.rs
src/app/widget/: decisions_table.rs  header.rs  label.rs  logs_panel.rs  mod.rs  player_details.rs  player_panel.rs  players_table.rs
src/core/: mod.rs
src/core/graphql/: get-all-tokens-nba-query.graphql  get-players-info-query.graphql  get-players-injury-query.graphql  get-players-stats-query.graphql  get-prices-query.graphql  schema-us-sports.graphql  schema.graphql
src/core/model/: currency.rs  decision.rs  injury.rs  mod.rs  player.rs  player_tests.rs  price.rs  stats.rs
src/core/repository/: error.rs  injury.rs  mod.rs  player.rs  player_tests.rs  price.rs  stats.rs  storage.rs
src/core/service/: injury.rs  mod.rs  player.rs  price.rs  stats.rs  strategy.rs  strategy_tests.rs
strats/: performers_v1.js  underdog_v1.js  young_players_v1.js
